Include product price in order items
