# src/docs/swagger/collections.yaml
@@ -2728,6 +2728,8 @@ components:
                 $ref: '#/components/schemas/Product'
               quantity:
                 type: integer
+              price:
+                type: number
         orderAmount:
           type: number
         discount:
@@ -2799,6 +2801,8 @@ components:
                 $ref: '#/components/schemas/Product'
               quantity:
                 type: integer
+              price:
+                type: number
         orderAmount:
           type: number
         discount:
